<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.activity.EditFishActivity"
    android:background="@color/colorWhite">

    <ScrollView
        android:id="@+id/create_new_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/create_new_save"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:id="@+id/main_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/main_logo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/logo"/>

                <TextView
                    android:id="@+id/main_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/create_new_image_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/main_identity">

                <ImageView
                    android:id="@+id/create_new_preview"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/header"
                    android:scaleType="centerCrop"/>

                <Button
                    android:id="@+id/create_new_choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="24dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/btn_choose"
                    android:textColor="@color/colorWhite"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/create_new_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/bg_bottom_card"
                android:layout_below="@id/create_new_image_container"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_fish_name"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:id="@+id/create_new_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/create_new_description_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/bg_bottom_card"
                android:layout_below="@id/create_new_name_container"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_fish_description"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:id="@+id/create_new_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/create_new_type_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/bg_bottom_card"
                android:layout_below="@id/create_new_description_container"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_type"
                    android:textColor="@color/colorPrimary"/>

                <Spinner
                    android:id="@+id/create_new_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/create_new_location_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/bg_bottom_card"
                android:layout_below="@id/create_new_type_container"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_location"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:id="@+id/create_new_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/create_new_category_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/bg_bottom_card"
                android:layout_below="@id/create_new_location_container"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_category"
                    android:textColor="@color/colorPrimary"/>

                <Button
                    android:id="@+id/create_new_category_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorWhite"
                    android:text="@string/label_category_add"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/create_new_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/create_new_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:layout_margin="16dp"
        android:text="@string/btn_save"
        android:textColor="@color/colorWhite"/>

</RelativeLayout>