<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.activity.DetailFishActivity"
    android:background="@color/colorWhite">

    <ScrollView
        android:id="@+id/detail_fish_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/detail_fish_share"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:id="@+id/main_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/main_logo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/logo"/>

                <TextView
                    android:id="@+id/main_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/detail_fish_image_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/main_identity">

                <ImageView
                    android:id="@+id/detail_fish_preview"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/header"
                    android:scaleType="centerCrop"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/detail_fish_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/bg_bottom_card"
                android:layout_below="@id/detail_fish_image_container"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_fish_name"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/detail_fish_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_fish_description_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/bg_bottom_card"
                android:layout_below="@id/detail_fish_name_container"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_fish_description"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/detail_fish_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_fish_type_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/bg_bottom_card"
                android:layout_below="@id/detail_fish_description_container"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_type"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/detail_fish_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_fish_location_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/bg_bottom_card"
                android:layout_below="@id/detail_fish_type_container"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_location"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/detail_fish_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_fish_category_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/bg_bottom_card"
                android:layout_below="@id/detail_fish_location_container"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_category"
                    android:textColor="@color/colorPrimary"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/detail_fish_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/detail_fish_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:layout_margin="16dp"
        android:text="@string/btn_share"
        android:textColor="@color/colorWhite"/>
</RelativeLayout>